Resume with ReactJS
This is my resume created with reactjs..

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,131 @@
-.App {
-  text-align: center;
+
+* {
+  margin: 0;
+  padding: 0;
+  overflow-x: hidden;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+body {
+  position: relative;
+  height: 85em;
+  background-color: white;
+  margin-top: 40px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+.header-container {
+  position: absolute;
+  z-index: 1;
+  height: 14em;
+  width: 90em;
+  display: grid;
+  grid-template-columns: repeat(2, 55em);
+  grid-template-rows: repeat(6, 2.2em);
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+
+.header-item1 {
+  color: #36454F;
+  height: 2.7em;
+  font-size: 50px;
+  font-weight: 700;
+  padding-left: 70px;
+  display: inline-grid;
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+
+.header-item3 {
+  font-size: 18px;
+  grid-row-start: 3;
+  grid-row-end: 7;
+  padding: 25px 72px;
+}
+
+
+.heading-text {
+  font-size: 24px;
+  font-weight: 700;
+}
+
+
+.educations {
+  font-size: 22px;
+  font-weight: 700;
+  padding-left: 70px;
+}
+
+
+.school {
+  font-family: Gill Sans MT;
+  font-size: 20px;
+  padding-left: 70px;
+}
+
+
+.year {
+  color: #20B2AA;
+  font-size: 14px;
+  padding-left: 70px;
+}
+
+
+.green-block {
+  background-color: #20B2AA;
+  height: 3.8em;
+  width: 2.5em;
+  position: absolute;
+}
+
+
+.skills {
+  display: inline-block;
+  background-color: #A9A9A9;
   color: white;
+  border-radius: 6px;
+  box-shadow: 2px 2px 2px hsl(0, 0%, 70%);
 }
 
-.App-link {
-  color: #61dafb;
+
+.sidebar {
+  margin: 0 10px 10px 0;
+  padding: 6px 12px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+
+.projects {
+  font-size: 20px;
+  font-family: Gill Sans MT;
 }
+
+
+.text {
+  font-size: 16px;
+  margin-bottom: 12px;
+}
+
+
+.muted-text {
+  color: #20B2AA;
+  font-size: 12px;
+  margin-bottom: 16px;
+}
+
+
+.spanned-text {
+  padding-left: 300px;
+}
+
+
+.interests {
+  background: transparent;
+  border: 1px solid #A9A9A9;
+  color: black;
+  padding: 6px 12px;
+  margin: 0 10px 10px 0;
+}
+
+
